# HW31

./: db.sqlite3  pyproject.toml  pytest.ini
HW28/: settings.py  urls.py
ads/: admin.py  models.py  permissions.py  serializers.py
ads/migrations/: 0001_initial.py  0002_initial.py
ads/urls/: ad.py  cat.py  selection.py
ads/views/: ad.py  cat.py  selection.py
data/: csv_to_json.py  user.json
tests/: factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_detail_test.py  ad_list_test.py
tests/selection/: selection_create_test.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
